# find-oddity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  find-oddity.qmlproject
content/: About.qml  AboutQt.qml  CMakeLists.txt  Creator.qml  DS.qml  MainWindow.qml  Player.qml  ProfessionList.qml  StageList.qml  qmldir
content/model/: ItemModel.hpp  ProfessionModel.hpp  StageModel.hpp
rc/: FindOddityCreator.rc  FindOddityPlayer.rc
src/: Creator.cpp  Player.cpp  main.cpp
src/controller/: ConnectModelWithData.cpp  ConnectModelWithData.hpp
src/dao/: AppDatabase.cpp  AppDatabase.hpp  Data.cpp  Data.hpp  Path.cpp  Path.hpp
src/model/: ItemModel.cpp  ModelInitializer.cpp  ModelInitializer.hpp  ProfessionModel.cpp  StageModel.cpp
